# chat-with-doc

./: .dockerignore  README.md  docker-compose.yml  package.json
apps/backend/: .dockerignore  .env.example  justfile  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: auth.py  main.py  session.py
apps/backend/app/config/: __init__.py
apps/backend/app/core/: logger.py
apps/backend/app/core/chroma/: __init__.py  chroma.py
apps/backend/app/core/rag/: rag.py
apps/backend/app/core/s3/: aws.py
apps/backend/app/core/utils/: hash.py  params.py
apps/backend/app/core/utils/exceptions/: auth.py  base.py  rag.py  session.py
apps/backend/app/core/utils/rag/: __init__.py  embedding.py  llm.py  loader.py  text_splitter.py
apps/backend/app/database/: __init__.py  main.py
apps/backend/app/database/models/: __init__.py  chats.py  documents.py  sessions.py  user.py  users_chats_table.py
apps/backend/app/middlewares/: auth_middleware.py
apps/backend/app/schemas/: auth.py  env.py  rag.py  response.py  s3.py  session.py
apps/backend/app/services/: auth.py  session.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 5c7988c42f07_session_name_added.py  affd84af011b_session_name_removed_nullabe_contrained.py  e1e855eaf319_create_db.py  e4e1bac32957_updated_chat_table_session_id.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: chat-interface.tsx  file-upload.tsx  sidebar.tsx
apps/web/src/hooks/: useAuth.ts  useSession.ts
docker/: DockerFile.be
(+19 files in other folders)
